src/objects/ReservationListWork__c.object
<CustomObject>
    <fields>
        <fullName>BatchLastTm__c</fullName>
        <label>バッチ最終実施時間</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateType__c</fullName>
        <label>データ種別</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>バッチ</fullName>
                    <default>true</default>
                    <label>バッチ</label>
                </value>
                <value>
                    <fullName>UI定義</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EntryDate__c</fullName>
        <label>予定表抽出日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FeedItemId__c</fullName>
        <label>投稿グループ情報</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FoodSumData2__c</fullName>
        <label>料理集計情報2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FoodSumData3__c</fullName>
        <label>料理集計情報3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FoodSumData__c</fullName>
        <label>料理集計情報</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FoodSumType__c</fullName>
        <label>料理集計種別</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>見積料理集計</fullName>
                </value>
                <value>
                    <fullName>会計料理集計</fullName>
                </value>
                <value>
                    <fullName>予約料理集計</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShopInfoRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>店舗情報</label>
        <referenceTo>ShopInformation__c</referenceTo>
        <relationshipName>ReservationListShopInfoRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>予定表ワーク</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ShopInfoRef__c</columns>
        <columns>DateType__c</columns>
        <columns>BatchLastTm__c</columns>
        <columns>EntryDate__c</columns>
        <columns>FoodSumType__c</columns>
        <columns>FoodSumData__c</columns>
        <columns>FeedItemId__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>RL_{00000000}</displayFormat>
        <label>予定表情報ワークNo</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>